# Low_Level_Programming

./: .gitignore  CMakeLists.txt  extra_task
Lab1/: CMakeLists.txt  README.md  cmake.sh  data_for_test  main.c  main.cpp  nix.sh  win.sh
Lab1/file_handler/: file_handler.c  file_handler.h
Lab1/header_manager/: header_manager.c  header_manager.h
Lab1/include/: database.h  header_manager.h  meta.h  node.h  page_manager.h  property.h  relationship.h  test.h  util.h
Lab1/page_manager/: page_manager.c  page_manager.h
Lab1/src/: database.cpp  file_handler.c  header_manager.c  meta.cpp  node.cpp  page_manager.c  property.cpp  relationship.cpp  test.cpp
Lab1/structs/: structs.h
Lab1/test/: stress_test.cpp  stress_test.h  test.cpp  test.h
Lab1/tests/: test.c
Lab2/: CMakeLists.txt  Makefile  README.md  lexer.c  lexer.cpp  lexer.h  lexer.l  main2.cpp  parser.c  parser.cpp  parser.h  parser.y  test_queries
Lab2/include/: ast.h  parser.y
Lab2/src/: ast.cpp
Lab3/: README.md  request_schema.xsd  response_schema.xsd
Lab3/client/: client.cpp
Lab3/client/include/: Connection.h  XMLFormatter.h
Lab3/client/src/: Connection.cpp  XMLFormatter.cpp
Lab3/common/: request_schema.cxx  request_schema.hxx  response_schema.cxx  response_schema.hxx
Lab3/exceptions/: exceptions.h
Lab3/server/: server.cpp
Lab3/server/include/: Connection.h  RequestInvoker.h
Lab3/server/src/: Connection.cpp  RequestInvoker.cpp
